# gps

./: .gitignore  .pylintrc  6_21.txt  README.md  agent_test.py  compile_proto.sh  exp_6_21.sh  exp_6_21_pt2.sh  exp_6_22.sh  exp_6_25.sh  exp_6_26.sh  exp_6_27.sh  format_for_email.py  frames.gv  goto.sh  hi.py  link  mat_to_py.py  plot_results.py  policy_tester.py  print_results.py  robot_mover.py  test_mpc.py
controller/: positioncontroller.h  robotplugin.h
docs/: autogen_hyperparams.py  bibtex.md  conf.py  deploy_instructions.txt  faq.md  gui.md  hyperparams.md  index.html  index.md  toctree.rst
experiments/: TODO.txt  crl_rnn_multilayerlog.txt  mjc_rnn_multimasslog.txt
experiments/box2d_arm_example/: hyperparams.py
experiments/box2d_arm_experiment/: hyperparams.py
experiments/box2d_badmm_example/: hyperparams.py
experiments/box2d_crawler_experiment/: hyperparams.py
experiments/box2d_experiment/: hyperparams.py
experiments/box2d_point_mass_experiment/: hyperparams.py
experiments/box2d_pointmass_example/: hyperparams.py
experiments/caffe_arm/: hyperparams.py
experiments/crl_1dof_ff/: hyperparams.py
experiments/crl_box_rnn_128/: hyperparams.py
experiments/crl_box_rnn_128_smallmassrange/: hyperparams.py
experiments/crl_box_rnn_1mass/: hyperparams.py
experiments/crl_box_rnn_32mass/: hyperparams.py
experiments/crl_box_rnn_32mass_widerange/: hyperparams.py
experiments/crl_box_rnn_8mass/: hyperparams.py
experiments/crl_box_rnn_8mass_normal/: hyperparams.py
experiments/crl_ff/: hyperparams.py
experiments/crl_ff_acc/: hyperparams.py
experiments/crl_ff_mm/: hyperparams.py
experiments/crl_ff_mm_rnndata/: hyperparams.py
experiments/crl_gain_v1/: hyperparams.py
experiments/crl_gain_v2/: hyperparams.py
experiments/crl_holdarm_ff/: hyperparams.py
experiments/crl_jar_mm_ff/: hyperparams.py
experiments/crl_jar_nog_rnn_1mass/: hyperparams.py
experiments/crl_jar_nog_rnn_5mass/: hyperparams.py
experiments/crl_jar_rnn_5mass/: hyperparams.py
experiments/crl_jar_svn40/: hyperparams.py
experiments/crl_jar_svv40/: hyperparams.py
experiments/crl_lln20/: hyperparams.py
experiments/crl_lsn20/: hyperparams.py
experiments/crl_lss200/: hyperparams.py
experiments/crl_rnn/: hyperparams.py
experiments/crl_rnn_1mass/: hyperparams.py
experiments/crl_rnn_1mass_highp/: hyperparams.py
experiments/crl_rnn_1mass_ramp/: hyperparams.py
experiments/crl_rnn_1mass_ramp_highp/: hyperparams.py
experiments/crl_rnn_1mass_ramp_lowp/: hyperparams.py
experiments/crl_rnn_damping_0110/: hyperparams.py
mjc_models/: particle2d.xml  particle2d_2.xml  pr2_arm3d.xml  pr2_arm3d_gravity.xml  pr2_arm3d_old_mjc.xml  reacher.xml
saved_examples/: pr2_mjc_scalegain  traj_xfer_rnn_crl_rnn_1mass.pkl  util.py
src/: gps_main.py  hyperparam_defaults.py  justin_test.py
src/gps_agent_pkg/: CMakeLists.txt  controller_plugins.xml  err.out  manifest.xml  package.xml  test.py
src/gps_agent_pkg/catkin_generated/: generate_cached_setup.py  setup_cached.sh
src/gps_agent_pkg/catkin_generated/stamps/gps_agent_pkg/: _setup_util.py.stamp
src/gps_agent_pkg/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/gps_agent_pkg/include/gps/proto/: gps.pb.cc  gps.pb.h
src/gps_agent_pkg/include/gps_agent_pkg/: ArmType.h  actionsensor.h  caffecontroller.h  caffenncontroller.h  camerasensor.h  controller.h  encoderfilter.h  encodersensor.h  lingausscontroller.h  lowdofcontroller.h  neuralnetwork.h  neuralnetworkcaffe.h  objectconfigsensor.h  openloopcontroller.h  options.h  positioncontroller.h  pr2plugin.h  robotplugin.h  sample.h  sceneplugin.h  sensor.h  trialcontroller.h  util.h  utils.h
src/gps_agent_pkg/launch/: minimal_controller.launch  pr2_gazebo.launch  pr2_gazebo_gears.launch  pr2_gazebo_grip.launch  pr2_gazebo_no_controller.launch  pr2_gazebo_no_controller_altpose.launch  pr2_gazebo_no_controller_gears.launch  pr2_only_controller.launch  pr2_real.launch  simple_object.launch
src/gps_agent_pkg/msg/: CaffeParams.msg  ControllerParams.msg  DataRequest.msg  DataType.msg  EnvConfigCommand.msg  LinGaussParams.msg  LowDofParams.msg  PositionCommand.msg  PositionCommandMsg.msg  RelaxCommand.msg  RequestData.msg  SampleResult.msg  SetModelConfig.msg  SetSceneConfig.msg  TrialCommand.msg
src/gps_agent_pkg/src/: actionsensor.cpp  caffenncontroller.cpp  camerasensor.cpp  controller.cpp  encoderfilter.cpp  encodersensor.cpp  lingausscontroller.cpp  lowdofcontroller.cpp  main.cpp  neuralnetwork.cpp  neuralnetworkcaffe.cpp  objectconfigsensor.cpp  openloopcontroller.cpp  positioncontroller.cpp  pr2plugin.cpp  robotplugin.cpp  sample.cpp  sceneplugin.cpp  sensor.cpp  simple_gripper.cpp  simple_torso.cpp  tfcontroller.cpp  trialcontroller.cpp
src/gps_agent_pkg/src/gps_agent_pkg/msg/: _CaffeParams.py  _ControllerParams.py  _DataRequest.py  _DataType.py  _LinGaussParams.py  _PositionCommand.py  _RelaxCommand.py  _SampleResult.py  _TrialCommand.py  __init__.py
src/gps_agent_pkg/test/: check_jac.py  issue_cont.py  issue_pos.py  run_train.py
src/gps_agent_pkg/urdf/: simple_object.urdf  simple_object1.urdf  simple_object2.urdf  simple_object3.urdf
src/gps_agent_pkg/worlds/: pr2_grip_world.world
state/: state.h
(+584 files in other folders)
