<package>
  <name>gps_agent_pkg</name>
  <version>1.2.4</version>
  <description>
    This package implements the Guided Policy Search ROS interface.
  </description>
  <maintainer email=""></maintainer>
  <license>BSD</license>

  <url></url>
  <author></author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
